compiler/internal/frontend/testdata/parser/negative/match.tetra
func main() -> Int:
    match value:
    case Result.ok(,):
        return x
